E2E-917 - Fix pull request comments